Fixes wrapping header (mobile issue).

--- a/assets/less/views/messages.less
+++ b/assets/less/views/messages.less
@@ -70,6 +70,9 @@
 				// everywhere.
 				.box();
 				overflow: hidden;
+				header {
+					overflow: hidden;
+				}
 			}
 
 		}
